--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <html>
 	<head>
 		<title>Student</title>
+		<link rel="stylesheet"
+	href="style.css">
 	</head>
 
 	<body>
 		<a href="cuprins.html">
 Cuprins</a>
-		<h1>Nume: Vararean</h1>
-		<h2>Prenume: Ioana</h2>
+		<h1 class="text-center">Nume: Vararean</h1>
+		<h2 class="text-center">Prenume: Ioana</h2>
 		<h3>Email: vararean.fl.ioana@student.utcluj.ro</h3>
 		
-		<img src= "images\bujori.jpg" width="400px" height="250px">
+		<img id="rounded-img" src= "images\bujori.jpg" width="400px" height="250px">
 
 		<h4>Asteptari legate de educatie: Sa reusesc sa termin facultatea fara restante</h4>
 		<p>Sa revina bursele!</p>
