--- a/index.html
+++ b/index.html
@@ -3,19 +3,31 @@
 		<title>Student</title>
 		<link rel="stylesheet"
 	href="style.css">
+	<script src="script.js" defer>
+	</script>
 	</head>
 
 	<body>
+		<button>
 		<a href="cuprins.html">
 Cuprins</a>
-		<h1 class="text-center">Nume: Vararean</h1>
-		<h2 class="text-center">Prenume: Ioana</h2>
+		</button>
+		<br>
+		<button id="button">Alta viata</button>
+
+		<div>
+		<h1 class="text-center" id="nume">Nume: Vararean</h1>
+		<h2 class="text-center" id="prenume">Prenume: Ioana</h2>
+		</div>
+
 		<h3>Email: vararean.fl.ioana@student.utcluj.ro</h3>
+
+	<p id="anNastere">2006</p>
 		
 		<img id="rounded-img" src= "images\bujori.jpg" width="400px" height="250px">
 
-		<h4>Asteptari legate de educatie: Sa reusesc sa termin facultatea fara restante</h4>
-		<p>Sa revina bursele!</p>
+		<h4 id="educatie">Asteptari legate de educatie: Sa reusesc sa termin facultatea fara restante</h4>
+		<p id="asteptari">Sa am un job bine platit!</p>
 
 		
 		<table>
